if (NOT ZLIB_FOUND)
  add_subdirectory (thirdparty/zlib)
endif ()

add_subdirectory (thirdparty/sexpr)
add_subdirectory (thirdparty/microzip)
add_subdirectory (thirdparty/google_test)
add_subdirectory (thirdparty/dasm)
add_subdirectory (regression)
add_subdirectory (dasm_test)
add_subdirectory (util)
add_subdirectory (filter_table)
add_subdirectory (inspect_table)